kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: final-devops-app
  template:
    metadata:
      labels:
        app: final-devops-app
    spec:
      containers:
        - name: app
          image: carbs411/session21:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20
