kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-devops-service
spec:
  selector:
    app: final-devops-app
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
